--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,13 @@
         <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
         <java.version>15</java.version>
-    </properties>
+
+	  <sonar.projectKey>Mackenzie-Curso-CI-CD_WebGoat2</sonar.projectKey>
+	  <sonar.moduleKey>${artifactId}</sonar.moduleKey>
+	  <sonar.organization>mackenzie-curso-ci-cd</sonar.organization>
+	  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+ 
+	</properties>
 
     <modules>
         <module>webgoat-container</module>
